# serializer version: 1
# name: TestVarOption.test
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int key = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_multiple
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
